2014-09-03  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Added dynamic macros for agent custom fields.

2014-09-02  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Added support for loading complex macros on
	  demand.

2014-09-02  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Added the macros _agentcustomid_ and
	  _modulecustomid_.

2014-08-27 Hirofumi Kosaka <kosaka@rworks.jp>

	* lib/PandoraFMS/PluginServer.pm: Fixed that _plugin_param2_
	and _plugin_param2_desc_ (and so on) were not replaced with
	the corresponding values.

2014-08-25 Vanessa Gil <vanessa.gil@artica.es>
	
	* util/pandora_db.pl: Fixed problem
	deleting events. Ticket #979.

2014-08-22  Koichiro Kikuchi <koichiro@rworks.jp>

	* FreeBSD/pandora_server: Fixed bug fail to start pandora_server with
	 no profile.

2014-08-21  Hirofumi Kosaka <kosaka@rworks.jp>

	* lib/PandoraFMS/Core.pm: Prevent some warnings would be
	written at pandora_server.error ("Use of uninitialized value
	in subroutine entry at ..." and "Use of uninitialized value in
	string ne at ..").

	MERGED FROM BRANCH 5.0 (rev10441).

2014-08-21  Junichi Satoh <junichi@rworks.jp>

	* util/pandora_manage.pl: Added an option to add an event comment.

2014-08-18  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Copy tag names to events, not the URL.

2014-08-18  Alejandro Gallardo <alejandro.gallardo@artica.es>

	* lib/PandoraFMS/Core.pm: Added an internal action to
	create a Integria IMS incident on the function
	"pandora_execute_action". Added the function
	"pandora_create_integria_ticket".

	* util/pandora_manage.pl: Added an option to recreate
	a collection with the function "cli_recreate_collection".
	Added a call to get the Pandora FMS shared config.

2014-08-14  Ramon Novoa  <rnovoa@artica.es>

	* conf/pandora_server.conf.new: Added recon_timing_template to the
	  configuration file.

2014-08-14  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Config.pm,